--- a/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
+++ b/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
@@ -29,17 +29,17 @@ con la presente, il gruppo 4ourSquared desidera candidarsi in via ufficiale per 
 Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link} (che effettuerà un \textit{redirect} su \href{https://github.com/}{GitHub}), saranno visionabili i seguenti nuovi documenti:
 \paragraph{Documenti Esterni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/analisi_dei_requisiti_v1.pdf}{Analisi dei Requisiti} v1.0.0
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_progetto_v1.pdf}{Piano di Progetto} v1.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_qualifica_v1.pdf}{Piano di Qualifica} v1.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/motivazione_scelte_v1.pdf}{Motivazione delle Scelte} v1.0.0
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/glossario_v1.pdf}{Glossario} v1.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/analisi_dei_requisiti_v1.0.0.pdf}{Analisi dei Requisiti} v1.0.0
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_progetto_v1.0.0.pdf}{Piano di Progetto} v1.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_qualifica_v1.0.0.pdf}{Piano di Qualifica} v1.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/motivazione_scelte_v1.0.0.pdf}{Motivazione delle Scelte} v1.0.0
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/glossario_v1.0.0.pdf}{Glossario} v1.0.0 (Aggiornato)
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_05_17_E.pdf}{Verbale del 17/05/2023 con Imola Informatica}
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_05_29_E.pdf}{Verbale del 29/05/2023 con Prof. Cardin}
 \end{itemize}
 \paragraph{Documenti Interni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto_v1.pdf}{Norme di Progetto} v1.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto_v1.0.0.pdf}{Norme di Progetto} v1.0.0 (Aggiornato)
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/verbali}{16 Verbali Interni}
 \end{itemize}
 
