--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -23,9 +23,11 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
 \addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
 
+
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
+
 
 \tableofcontents
 
@@ -34,11 +36,13 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \makecontentsdetails{Glossario}
 
 \section*{A.}
+\markboth{A.}{}
 \addcontentsline{toc}{section}{A.}
 \textbf{Area illuminata:} un luogo composto da un insieme di un numero arbitrario di \textit{impianti luminosi\textsubscript{G}} e sensori.
 
 \newpage
 \section*{B.}
+\markboth{B.}{}
 \addcontentsline{toc}{section}{B.}
 \textbf{Back-end:} parte di un sistema software che elabora i dati generati dal \textit{front-end\textsubscript{G}}. \\ \\
 \textbf{Blocco di Codice:} gruppo di istruzioni che devono essere eseguite in ordine. \\ \\
@@ -48,12 +52,14 @@ sorgente e modificarne alcune parti, apportando modifiche che non intaccano il c
 
 \newpage
 \section*{D.}
+\markboth{D.}{}
 \addcontentsline{toc}{section}{D.}
 \textbf{Dashboard:} pannello di visualizzazione dei dati che fornisce una panoramica in tempo reale delle prestazioni e delle metriche di un progetto, servizio o specifica risorsa. \\ \\
 \textbf{Diagramma di Gantt:} strumento di supporto alla gestione dei progetti. Esso presenta l'arco temporale del progetto suddiviso in fasi incrementali e le mansioni che rappresentano il progetto stesso. \\
 
 \newpage
 \section*{F.}
+\markboth{F.}{}
 \addcontentsline{toc}{section}{F.}
 \textbf{Fornitura:} ciascuna delle serie di prodotti necessari al completamento, al funzionamento o all'efficienza di qualcosa. \\ \\
 \textbf{Front-end:} parte di un sistema software che gestisce l'interazione con l'utente o con sistemi esterni. \\ \\
@@ -61,6 +67,7 @@ sorgente e modificarne alcune parti, apportando modifiche che non intaccano il c
 
 \newpage
 \section*{G.}
+\markboth{G.}{}
 \addcontentsline{toc}{section}{G.}
 \textbf{Git:} sistema di controllo di versione distribuito, focalizzato
 sull'agevolare il coordinamento dello sviluppo di codice tra più persone. \\ \\
@@ -75,6 +82,7 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 \newpage
 
 \section*{I.}
+\markboth{I.}{}
 \addcontentsline{toc}{section}{I.}
 \textbf{IoT}: \textit{Internet of Things}, descrive la rete di oggetti fisici che hanno sensori, software e altre tecnologie integrate allo scopo di connettere e scambiare dati con altri dispositivi e sistemi tramite internet. \\ \\
 \textbf{Impianto luminoso:} elemento composto da una fonte luminosa. \\ \\
@@ -84,16 +92,19 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 
 \newpage
 \section*{L.}
+\markboth{L.}{}
 \addcontentsline{toc}{section}{L.}
 \textbf{Landing Page:}: pagina web che ha il compito di accogliere l'utente che vi arriva, fornendogli informazioni e aiutandolo a trovare ciò che cerca. \\ \\
 
 \newpage
 \section*{M.}
+\markboth{M.}{}
 \addcontentsline{toc}{section}{M.}
 \textbf{Multithreading:} tecnicna utilizzata nella programmazione per consentire a un singolo processo di avere più \textit{thread\textsubscript{G}} di esecuzione. Ogni thread può funzionare in modo indipendente e parallelo, consentendo un uso più efficiente delle risorse. Ciò può aiutare a migliorare le prestazioni complessive di un programma e renderlo più sensibile all'input di un utente. \\ \\
 
 \newpage
 \section*{P.}
+\markboth{P.}{}
 \addcontentsline{toc}{section}{P.}
 \textbf{Piano di Progetto:} calendario di massima di un progetto riportante la stima dei costi di realizzazione, dei rischi attesi e della loro mitigazione e infine della suddivisione del lavoro in molteplici periodi successivi. Per ogni periodo devono essere riportati i seguenti elementi: obiettivi attesi, obiettivi raggiunti, rischi occorsi, conseguenze e mitigazione, costi osservati e aggiornamento del calendario futuro e della stima dei costi finali. \\ \\
 \textbf{Piano di Qualifica:} specifica gli obiettivi quantitativi di qualità di prodotto e di processo, oltre a misurare il raggiungimento di tali obiettivi allo stato corrente pone le fondamenta per retrospettive e iniziative di auto-miglioramento. \\ \\
@@ -102,6 +113,7 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 
 \newpage
 \section*{R.}
+\markboth{R.}{}
 \addcontentsline{toc}{section}{R.}
 \textbf{Repository:} è una cartella remota che permette il salvataggio dei file
 di progetto ed utilizza un sistema di controllo di versione. Quando
@@ -110,11 +122,13 @@ viene nominato, ci si riferisce al repository \textit{GitHub\textsubscript{G}} r
 
 \newpage
 \section*{S.}
+\markboth{S.}{}
 \addcontentsline{toc}{section}{S.}
 \textbf{Soglia:} una fascia di tolleranza utilizzata per determinare se l'\textit{intensità luminosa\textsubscript{G}} è al di sopra o al di sotto di un limite in una determinata fascia oraria. \\ \\
 
 \newpage
 \section*{T.}
+\markboth{T.}{}
 \addcontentsline{toc}{section}{T.}
 \textbf{Thread:} suddivisione di un processo in più istanze o sottoprocessi che vengono eseguiti concorrentemente da un sistema di elaborazione. \\ \\
 \textbf{Ticket:} è l'astrazione presente in GitHub Issues con cui si rappresenta
@@ -127,11 +141,13 @@ progetto: è composto di più \textit{ticket\textsubscript{G}}, che permettono u
 efficace di ogni incarico effettuato dai membri del gruppo. \\ \\
 \newpage
 \section*{V.}
+\markboth{V.}{}
 \addcontentsline{toc}{section}{V.}
 \textbf{Versionamento:} tracciamento di un determinato stato di un software nel tempo. \\ \\
 
 \newpage
 \section*{W.}
+\markboth{W.}{}
 \addcontentsline{toc}{section}{W.}
 \textbf{Way of Working:} rappresenta il come organizzare in maniera professionale le attività di progetto.\\ \\
 \textbf{Web Application:} indica generalmente tutte le applicazioni fruibili tramite il web.
